--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -10,7 +11,94 @@
 
 </head>
 
-<body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+<body class="wrapper">
+
+	<div class="box0">
+		<nav>
+			<a href="#">Services</a>
+			<a href="#">Product</a>
+			<a href="#">Vision</a>
+			<a href="#">Features</a>
+			<a href="#">About</a>
+			<a href="#">Contact</a>
+		</nav>
+
+
+		<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+	</div>
+
+  <div class="mobilepaddingcontainer">
+
+	<div class="box1">
+		<div class="buttonheader">
+			<h1>Innovation <br>
+				On <br>
+				Demand
+			</h1>
+
+			<button>Get Started</button>
+		</div>
+		<div class="circlepic">
+			<img src="img/header-img.png" alt="Image of a code snippet.">
+		</div>
+	</div>
+
+	<hr>
+
+	<div class="box2">
+		<div class="box2component">
+			<h3>Features</h3>
+			<p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+				Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+		</div>
+
+		<div class="box2component">
+			<h3>About</h3>
+			<p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+				Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+		</div>
+
+	</div>
+
+	<img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+	<div class="box3">
+		<div class="box3component">
+			<h3>Services</h3>
+			<p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+				Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+		</div>
+
+		<div class="box3component">
+			<h3>Product</h3>
+			<p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+				Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+		</div>
+
+		<div class="box3component">
+			<h3>Vision</h3>
+			<p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+				Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+		</div>
+	</div>
+
+	<hr>
+	<br>
+	<br>
+
+	<h3>Contact</h3>
+	<p>123 Way 456 Street</p>
+	<p>Somewhere, USA</p>
+	<br>
+	<p>1 (888) 888-8888</p>
+	<br>
+	<p>sales@greatidea.io</p>
+
+	<div class="copyright">
+		<p>Copyright Great Idea! 2018</p>
+	</div>
+
+</div>
+
 </body>
 </html>
